; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_mt7621.c_mt7621_rxcsum_config.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_soc_mt7621.c_mt7621_rxcsum_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MT7620A_GDMA1_FWD_CFG = common dso_local global i32 0, align 4
@GDMA_ICS_EN = common dso_local global i32 0, align 4
@GDMA_TCS_EN = common dso_local global i32 0, align 4
@GDMA_UCS_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mt7621_rxcsum_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mt7621_rxcsum_config(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i32, i32* @MT7620A_GDMA1_FWD_CFG, align 4
  %7 = call i32 @fe_r32(i32 %6)
  %8 = load i32, i32* @GDMA_ICS_EN, align 4
  %9 = load i32, i32* @GDMA_TCS_EN, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @GDMA_UCS_EN, align 4
  %12 = or i32 %10, %11
  %13 = or i32 %7, %12
  %14 = load i32, i32* @MT7620A_GDMA1_FWD_CFG, align 4
  %15 = call i32 @fe_w32(i32 %13, i32 %14)
  br label %28

16:                                               ; preds = %1
  %17 = load i32, i32* @MT7620A_GDMA1_FWD_CFG, align 4
  %18 = call i32 @fe_r32(i32 %17)
  %19 = load i32, i32* @GDMA_ICS_EN, align 4
  %20 = load i32, i32* @GDMA_TCS_EN, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @GDMA_UCS_EN, align 4
  %23 = or i32 %21, %22
  %24 = xor i32 %23, -1
  %25 = and i32 %18, %24
  %26 = load i32, i32* @MT7620A_GDMA1_FWD_CFG, align 4
  %27 = call i32 @fe_w32(i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @fe_w32(i32, i32) #1

declare dso_local i32 @fe_r32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
